# pantograph_robot

./: .gitignore
pantograph_description/: CMakeLists.txt  package.xml
pantograph_description/launch/: load.launch
pantograph_description/urdf/: pantograph.urdf.xacro
pantograph_hardware/: CMakeLists.txt  package.xml
pantograph_hardware/config/: controllers.yaml  hardware.yaml  plotjuggler_config.xml
pantograph_hardware/include/pantograph_hardware/: pantograph_hw.h  sanmotion.h
pantograph_hardware/launch/: bringup.launch  teleop.launch
pantograph_hardware/script/: bringup.sh
pantograph_hardware/src/: main.cpp
pantograph_hardware/src/pantograph_hardware/: pantograph_hw.cpp  sanmotion.cpp
pantograph_hardware/tests/: test_sanmotion.cpp
pantograph_perception/: CMakeLists.txt  package.xml  setup.py
pantograph_perception/src/pantograph_perception/: kalman_filter.py  puck_detection.py
pantograph_robot/: CMakeLists.txt  package.xml
pantograph_teleop/: CMakeLists.txt  package.xml  setup.py
pantograph_teleop/config/: default.rviz
pantograph_teleop/launch/: fake_joint_state_gui.launch  joint_teleop.launch  striker_teleop.launch
pantograph_teleop/src/: striker_teleop.py
pantograph_teleop/src/pantograph_teleop/: kinematics.py
