<?xml version="1.0"?>
<package format="2">
  <name>pantograph_robot</name>
  <version>0.0.0</version>
  <description>The pantograph_robot metapackage</description>
  
  <maintainer email="myfullname@boisestate.edu">Robot Control Lab</maintainer>
  <author email="myfullname@boisestate.edu">Wankun Sirichotiyakul</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
