<?xml version="1.0"?>
<package format="2">
  <name>pantograph_teleop</name>
  <version>0.0.0</version>
  <description>The pantograph_teleop package</description>
  <maintainer email="myfullname@boisestate.edu">Robot Control Lab</maintainer>
  <author email="myfullname@boisestate.edu">Wankun Sirichotiyakul</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>twist_mux</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
